; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_vSimpleLinkSpawnTask.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/oslib/extr_osi_freertos.c_vSimpleLinkSpawnTask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i32)* }

@xSimpleLinkSpawnQueue = common dso_local global i32 0, align 4
@SL_SPAWN_MAX_WAIT_MS = common dso_local global i32 0, align 4
@pdPASS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vSimpleLinkSpawnTask(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  br label %5

5:                                                ; preds = %18, %1
  %6 = load i32, i32* @xSimpleLinkSpawnQueue, align 4
  %7 = load i32, i32* @SL_SPAWN_MAX_WAIT_MS, align 4
  %8 = call i64 @xQueueReceive(i32 %6, %struct.TYPE_3__* %3, i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @pdPASS, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %5
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %14 = load i32 (i32)*, i32 (i32)** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 %14(i32 %16)
  br label %18

18:                                               ; preds = %12, %5
  %19 = call i32 (...) @pybwdt_sl_alive()
  br label %5
}

declare dso_local i64 @xQueueReceive(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @pybwdt_sl_alive(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
